Edited dueling-wizards-wireframe, index.js, and index.html

--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
       <p class="roundsLeftCount">5</p>
     </div>
 
+    <div>
+      <h2 class="callToAction">Choose the Element Spell you cast!</h2>
+    </div>
+
     <div class="spellButtons">
       <button class="water">Water</button>
       <button class="fire">Fire</button>
