Edited Damage Table PNG

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         You and fellow wizard Osmanwic are fighting a duel by casting spells
         against each other that harnesses the power of the Four Elements: Water,
         Fire, Earth, and Wind. How much a spell weakens an opponent (lowers
-        Health Level) can be affected by the spell that the opponent casts, as
-        shown in the Damage Table below. A wizards duel consists of five
-        rounds/turns, at which point the wizard who has been weakened the most
+        their Health Level) can be affected by the spell that the opponent
+        casts, as shown in the Damage Table below. A wizards duel consists of
+        five rounds, after which the wizard who has been weakened the most
         yields. When both have been equally weakened, they agree to call the
         duel a draw.
       </p>
