Added sound effects

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
       <p>
         You and fellow wizard Osmanwic are fighting a duel by casting spells
         against each other that harnesses the power of the Four Elements: Water,
-        Fire, Earth, and Wind.
+        Fire, Earth, and Air.
         <a href="dueling-wizards-damage-table.png" target="”_blank”"
           >The Damage Table</a
         >
         below shows how much duelists' Health Levels decrease depending on the
-        spells cast. A wizards duel consists of five rounds, after which the
-        wizard who has been weakened the most yields. When both have been
+        spells cast. A wizards duel consists of <b>five rounds</b>, after which
+        the wizard who has been weakened the most yields. When both have been
         equally weakened, they agree to call the duel a draw.
       </p>
     </div>
@@ -64,7 +64,7 @@
       <button class="waterButton selectSpell">Water</button>
       <button class="fireButton selectSpell">Fire</button>
       <button class="earthButton selectSpell">Earth</button>
-      <button class="windButton selectSpell">Wind</button>
+      <button class="airButton selectSpell">Air</button>
     </div>
     <div class="results">
       <div class="gameResult"></div>
