Added  conditional formatting to Health Level counts. Edited formatting of the cast, damage, and game result messages that print to the DOM, and edited more CSS properties from px to rem

--- a/index.html
+++ b/index.html
@@ -18,15 +18,17 @@
     <h1 class="title">Dueling Wizards</h1>
     <!-- tag before the code and a -->
     <div class="introduction">
-      <p>
-        You and fellow wizard Osmanwic are fighting a duel by casting spells
-        against each other that harnesses the power of the Four Elements: Water,
-        Fire, Earth, and Air.
+      <p class="introductionText">
+        <b
+          >You and fellow wizard Osmanwic are fighting a duel of spells that
+          harness the powers of the Four Elements: Water, Fire, Earth, and
+          Air.</b
+        ><br />
         <a href="dueling-wizards-damage-table.png" target="”_blank”"
           >The Damage Table</a
         >
         below shows how much duelists' Health Levels decrease depending on the
-        spells cast. A wizards duel consists of <b>five rounds</b>, after which
+        spells cast. A wizards duel consists of <i>five rounds</i>, after which
         the wizard who has been weakened the most yields. When both have been
         equally weakened, they agree to call the duel a draw.
       </p>
@@ -57,7 +59,7 @@
     </div>
 
     <div>
-      <h2 class="callToAction">Choose the Element Spell to cast!</h2>
+      <h2 class="callToAction">Choose Which Kind of Element Spell You Cast!</h2>
     </div>
 
     <div class="spellButtons">
@@ -67,9 +69,9 @@
       <button class="airButton selectSpell">Air</button>
     </div>
     <div class="results">
-      <div class="gameResult"></div>
       <div class="castResult"></div>
       <div class="damageResult"></div>
+      <div class="gameResult"></div>
     </div>
 
     <div>
