Changed styling of all buttons

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           harness the powers of the Four Elements: Water, Fire, Earth, and
           Air.</b
         ><br />
-        <a href="dueling-wizards-damage-table.png" target="”_blank”"
+        <a href="dueling-wizards-damage-table.png" target="_blank"
           >The Damage Table</a
         >
         below shows how much duelists' Health Levels decrease depending on the
