Corrected a typo in README.md

--- a/index.html
+++ b/index.html
@@ -25,22 +25,22 @@
           Air.</b
         ><br />
         <a href="dueling-wizards-damage-table.png" target="_blank"
-          >The Damage Table</a
-        >
-        below shows how much duelists' Health Levels decrease depending on the
+          >The Damage Table here</a
+        > (and below) shows how much duelists' Health Levels decrease depending on the
         spells cast. A wizards duel consists of <i>five rounds</i>, after which
         the wizard who has been weakened the most yields. When both have been
         equally weakened, they agree to call the duel a draw.
       </p>
     </div>
     <!-- eventListener 'click' on .spellButtons class-->
-
-    <img
-      class="damageTable"
-      src="dueling-wizards-damage-table.png"
-      alt="Damage table for Dueling Wizards game"
-    />
-
+    <div class="middleRow">
+      <button class="muteButton">Mute<br />Sound<br />Effects</button>
+      <img
+        class="damageTable"
+        src="dueling-wizards-damage-table.png"
+        alt="Damage table for Dueling Wizards game"
+      />
+    </div>
     <div class="healthLevels">
       <div class="userHealth">
         <h2>Your Health Level: <span class="userHealthLevelCount"></span></h2>
