commit in anticipation of branching

--- a/index.html
+++ b/index.html
@@ -26,15 +26,16 @@
         ><br />
         <a href="dueling-wizards-damage-table.png" target="_blank"
           >The Damage Table here</a
-        > (and below) shows how much duelists' Health Levels decrease depending on the
-        spells cast. A wizards duel consists of <i>five rounds</i>, after which
-        the wizard who has been weakened the most yields. When both have been
-        equally weakened, they agree to call the duel a draw.
+        >
+        (and below) shows how much duelists' Health Levels decrease depending on
+        the spells cast. A wizards duel consists of <i>five rounds</i>, after
+        which the wizard who has been weakened the most yields. When both have
+        been equally weakened, they agree to call the duel a draw.
       </p>
     </div>
     <!-- eventListener 'click' on .spellButtons class-->
     <div class="middleRow">
-      <button class="muteButton">Mute<br />Sound<br />Effects</button>
+      <!-- <button class="muteButton">Mute<br />Sound<br />Effects</button> -->
       <img
         class="damageTable"
         src="dueling-wizards-damage-table.png"
